# drone-simulator

./: .gitignore  CMakeLists.txt  Makefile  README.md  appsettings.json  build.sh
.github/workflows/: ci.yaml  prerelease.yaml  release.yaml
include/: blackboard.h  blackboard.hpp  dds.hpp  drone.h  drone.hpp  keyboard.h  keyboard.hpp  obstacles.h  obstacles.hpp  obstacles_dds.hpp  pipes.h  pipes.hpp  targets.h  targets.hpp  test.h  utils.h  utils.hpp  watchdog.h  watchdog.hpp
src/: blackboard.c  blackboard.cpp  constants.h  dds.cpp  drone.c  drone.cpp  keyboard.c  keyboard.cpp  lib.c  main.c  main.cpp  obstacles.c  obstacles.cpp  obstacles_dds.cpp  pipes.c  pipes.cpp  playground.c  targets.c  targets.cpp  test.c  types.h  utils.c  utils.cpp  watchdog.c  watchdog.cpp
tests/: test_main.c  test_obstacles.c
